--- a/major-project-css/index.html
+++ b/major-project-css/index.html
@@ -122,7 +122,16 @@
             </div>
         </div>
         <div class="music-player">
-            <div class="album"></div> <!-- home work -->
+            <div class="album">
+                <div class="music-player-album-picture">
+                    <img src="./Homework Assets/album_picture.jpeg" class="picture" style="height: 3rem;">
+                </div>
+                <div class="p">
+                    <p>Daylight</p>
+                    <p class="opacity">David Kushner</p>
+                </div>
+                <div class="music-player-icons"></div>
+            </div> <!-- home work -->
             <div class="player">
                 <div class="player-controls">
                     <img src="./assets/player_icon1.png" class="player-control-icon">
