--- a/major-project-css/index.html
+++ b/major-project-css/index.html
@@ -10,6 +10,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+</head>
 <body>
     <div class="main">
         <div class="sidebar">
@@ -126,11 +127,19 @@
                 <div class="music-player-album-picture">
                     <img src="./Homework Assets/album_picture.jpeg" class="picture" style="height: 3rem;">
                 </div>
-                <div class="p">
-                    <p>Daylight</p>
+                <div class="song-info">
+                    <p class="song-name-hero">Daylight</p>
                     <p class="opacity">David Kushner</p>
                 </div>
-                <div class="music-player-icons"></div>
+                <div class="liked-hover">
+                    <div class="liked-song">
+                        <img src="./Homework Assets/album_icon1.png">
+                    </div>
+                    <div class="window">
+                        <img src="./Homework Assets/album_icon2.png" style="height: 2.19rem;">
+                    </div>
+                </div>
+               
             </div> <!-- home work -->
             <div class="player">
                 <div class="player-controls">
@@ -146,7 +155,26 @@
                     <span class="tot-time">3:33</span>
                 </div>
             </div>
-            <div class="controls"></div> <!-- home work -->
+            <div class="controls">
+                <div class="five-icons">
+                    <div class="playing-view">
+                        <img src="./Homework Assets/controls_icon1.png" style="height: 2rem; margin: ">
+                    </div>
+                    <div class="lyrics">
+                        <img src="./Homework Assets/controld_icon2.png" style="height: 2rem;">
+                    </div>
+                    <div class="queue">
+                        <img src="./Homework Assets/controls_icon3.png" style="height: 2rem;">
+                    </div>
+                    <div class="deive-connection">
+                        <img src="./Homework Assets/controls_icon4.png" style="height: 2rem;">
+                    </div>
+                    <div class="sound-mute">
+                        <img src="./Homework Assets/controls_icon5.png" style="height: 2rem;">
+                    </div>
+                </div>
+                <div class="sound-line"></div>
+            </div> <!-- home work -->
         </div>
     </div>
 </body>
